cabal-version:       >=1.10

name:                roll
version:             0.1.0.5
license:             Apache-2.0
license-file:        LICENSE
author:              Carl Howells
maintainer:          chowells79@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable roll
  main-is:             Main.hs
  ghc-options:         -Wall
  other-modules:       Paths_roll
                       Dice
                       Version
  build-depends:       base               >= 4.14 && <4.18,
                       Earley             >= 0.13.0 && < 0.14,
                       parser-combinators >= 1.2.1 && < 1.3,
                       random             >= 1.2.0 && < 1.3,
                       template-haskell
  hs-source-dirs:      src
  default-language:    Haskell2010
