cabal-version:       3.4
name:                roll
version:             0.1.0.7
license:             Apache-2.0
license-file:        LICENSE
author:              Carl Howells
maintainer:          chowells79@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md


library
  hs-source-dirs:      lib
  exposed-modules:     Dice
                       Version
                       Driver
  other-modules:       Paths_roll
  autogen-modules:     Paths_roll
  build-depends:       base               >= 4.14 && <4.18,
                       Earley             >= 0.13.0 && < 0.14,
                       parser-combinators >= 1.2.1 && < 1.4,
                       random             >= 1.2.0 && < 1.3
  default-language:    Haskell2010


executable roll
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base               >= 4.14 && <4.18,
                       roll
  default-language:    Haskell2010
