cabal-version:       3.8
name:                roll
version:             0.1.1.1
license:             Apache-2.0
license-file:        LICENSE
author:              Carl Howells
maintainer:          chowells79@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md
                     README.md


common shared-settings
  default-language:    Haskell2010
  ghc-options:         -fno-full-laziness -Wall


library
  import:              shared-settings
  hs-source-dirs:      lib
  -- Set the module loaded by cabal repl
  exposed-modules:     Driver
  -- The rest of the exposed modules
  exposed-modules:     Dice
                       Version
  other-modules:       Paths_roll
  autogen-modules:     Paths_roll
  build-depends:       base               >= 4.14 && <4.18,
                       Earley             >= 0.13.0 && < 0.14,
                       parser-combinators >= 1.2.1 && < 1.4,
                       random             >= 1.2.0 && < 1.3

executable roll
  import:              shared-settings
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base               >= 4.14 && <4.18,
                       roll
